FIXED - comment content overflow issue

--- a/evup/public/css/app.css
+++ b/evup/public/css/app.css
@@ -2349,6 +2349,10 @@ body {
     gap: 2em;
     flex-wrap: wrap;
   }
+
+  .whitespace-pre-wrap {
+    white-space: pre-wrap;
+  }
   
   .placeholder\:italic::-moz-placeholder {
   font-style: italic;
